# ats-args

./: .drone.yml  .gitignore  CMakeLists.txt  Makefile  README.md  ats-args.hats  package-lock.json  package.json
examples/: Makefile  main.dats  main3.dats
src/: main.dats  mylibies.hats
src/DATS/: arg.dats  args.dats  helper.dats  lib.dats  parser.dats  result.dats  subcommand.dats
src/HATS/: includes.hats
src/SATS/: arg.sats  args.sats  helper.sats  lib.sats  parser.sats  result.sats  subcommand.sats
test/: Makefile  main.dats  main2.dats  main3.dats
tests/: CMakeLists.txt  Makefile  package-lock.json  package.json  tests.dats
