CMAKE_MINIMUM_REQUIRED (VERSION 3.10)

PROJECT (ATSARGS C)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/../cmake")

ADD_SUBDIRECTORY(.. build)

FIND_PACKAGE (ATS REQUIRED)
IF (NOT ATS_FOUND)
	MESSAGE (FATAL_ERROR ”ATS Not Found!”)
ENDIF ()

ATS_INCLUDE (.)
set(CMAKE_C_FLAGS "-DATS_MEMALLOC_LIBC -D_DEFAULT_SOURCE -g")

IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/node_modules)
	ATS_INCLUDE (node_modules)
	ATS_INCLUDE (../node_modules)
endif()

ATS_COMPILE (SRC
	tests.dats
	)
ADD_EXECUTABLE(tests ${SRC})
target_link_libraries(tests atsargs)